# frameworks_base_cmds_remoted

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build.sh  remoted
flint/: CMakeLists.txt
flint/src/comm/: IServer.cpp  IServer.h
flint/src/flint/: FlintServer.cpp  FlintServer.h
flint/src/flint/application/: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  DialConfig.cpp  DialConfig.h
flint/src/flint/handler/: ApplicationControlHandler.cpp  ApplicationControlHandler.h  DeviceDescHandler.cpp  DeviceDescHandler.h  DialHandler.cpp  DialHandler.h  ReceiverApplicationHandler.cpp  ReceiverApplicationHandler.h  SystemControlHandler.cpp  SystemControlHandler.h
flint/src/flint/session/: ISessionListener.h  ReceiverSession.cpp  ReceiverSession.h  SenderSession.cpp  SenderSession.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
flint/src/net/: NetworkManager.cpp  NetworkManager.h
flint/src/tcp/: TCPServer.cpp  TCPServer.h
flint/src/udp/: UDPServer.cpp  UDPServer.h
flint/src/utils/: LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  StringPiece.cpp  StringPiece.h  StringUtils.cpp  StringUtils.h  UUID.cpp  UUID.h
libs/boost/: CMakeLists.txt
remote_daemon/: CMakeLists.txt
remote_daemon/src/: InputEventHandler.cpp  InputEventHandler.h  RemoteDaemon.cpp  RemoteDaemon.h  TcpSessionWrapper.cpp  TcpSessionWrapper.h  main.cpp
remote_daemon/test/: multi_connections.js  single_connection.js
